avoid red front bars on small an xtra small devices

--- a/css/start.css
+++ b/css/start.css
@@ -1,3 +1,10 @@
 body {
   background: url(../img/start.jpg);
 }
+
+@media only screen and (min-width: 992px) {
+  .teaser-red {
+	border-left-style:solid;
+	border-left-color:red;
+   }
+}
